--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -36,8 +36,8 @@
                       <img class="orbit-image" src="{{ SITEURL }}/{{ image.small.url }}" alt="Photo of a stone">
                     </picture>
                     <figcaption class="orbit-caption">
-                      <span>{{ image[1] }}</span>
-                      <span><a href="{{ image[3] }}" target="_blank" rel="noopener">{{ image[2] }}</a></span>
+                      <span>{{ image.title }}</span>
+                      <span><a href="{{ image.url }}" target="_blank" rel="noopener">{{ image.author }}</a></span>
                     </figcaption>
                   </figure>
                 </li>
