Made the return-to-landing-page script configurable

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -75,5 +75,6 @@
   </script>
   {% include '_footer.html' %}
   {% include '_base_scripts.html' %}
+  {% include '_go_to_landing_script.html' %}
 </body>
 {% endblock body %}
