--- a/theme/templates/_go_to_landing_script.html
+++ b/theme/templates/_go_to_landing_script.html
@@ -1,12 +1,14 @@
-<script>
-/*var goToLandingTimeout;
-function goToLanding() {
-    window.location = '/';
-}
-function cancelGoToLanding() {
-    clearTimeout(goToLandingTimeout)
-    goToLandingTimeout = setTimeout(goToLanding, 300000);
-}
-goToLandingTimeout = setTimeout(goToLanding, 300000);
-$(document).on('mousemove', cancelGoToLanding).on('keyup', cancelGoToLanding);;*/
-</script>
+{% if not DEVELOPMENT %}
+  <script>
+  var goToLandingTimeout;
+  function goToLanding() {
+      window.location = '/';
+  }
+  function cancelGoToLanding() {
+      clearTimeout(goToLandingTimeout)
+      goToLandingTimeout = setTimeout(goToLanding, 300000);
+  }
+  goToLandingTimeout = setTimeout(goToLanding, 300000);
+  $(document).on('mousemove', cancelGoToLanding).on('keyup', cancelGoToLanding);
+  </script>
+{% endif %}
