Improved the landing page layout on small screens

--- a/theme/src/_landing.scss
+++ b/theme/src/_landing.scss
@@ -6,6 +6,10 @@
     .grid-x {
         height: 100vh;
 
+        @include breakpoint(small only) {
+            height: 90vh;
+        }
+
         > .grid-y {
             justify-content: center;
             align-items: center;
