--- a/theme/templates/category.html
+++ b/theme/templates/category.html
@@ -11,8 +11,8 @@
     <div class="grid-x">
       <div class="cell small-12">
         <h1>{{ category }}</h1>
-        <div class="grid-x hide-for-small">
-          <div class="cell medium-9 large-10">
+        <div class="grid-x">
+          <div class="cell small-12 large-auto">
             <ul class="figure-list">
               {% for article in articles %}
                 {% if article.tags %}
@@ -32,7 +32,7 @@
               {% endfor %}
             </ul>
           </div>
-          <div class="cell medium-3 large-2">
+          <div class="cell small-12 large-shrink">
             <ul class="menu vertical label-list">
               {% for tag in articles|tag_set|sort(attribute='slug') %}
                 {% if tag.slug != category.slug %}
