--- a/theme/src/_explore.scss
+++ b/theme/src/_explore.scss
@@ -1,5 +1,7 @@
 .tags, .categories {
     .figure-list {
+        margin: 0;
+
         li {
             list-style-type: none;
 
@@ -105,8 +107,27 @@
         .figure-list {
             display: flex;
             flex-direction: row;
-            width: rem-calc(240);
+            width: 100%;
             overflow: hidden;
+
+            li {
+                width: 100%;
+                flex: 0 0 auto;
+
+                a {
+                    figure {
+                        width: 100%;
+                        height: 190px;
+                        margin: 0;
+                        box-shadow: none;
+                    }
+                }
+            }
+        }
+
+        .label-list {
+            flex-direction: row;
+            flex-wrap: wrap;
         }
     }
 
