--- a/theme/templates/category.html
+++ b/theme/templates/category.html
@@ -12,7 +12,7 @@
       <div class="cell small-12">
         <h1>{{ category }}</h1>
         <div class="grid-x">
-          <div class="cell small-12 large-auto">
+          <div class="cell small-12 medium-order-2 large-auto large-order-1">
             <ul class="figure-list">
               {% for article in articles %}
                 {% if article.tags %}
@@ -32,7 +32,7 @@
               {% endfor %}
             </ul>
           </div>
-          <div class="cell small-12 large-shrink">
+          <div class="cell small-12 medium-order-1 large-shrink large-order-1">
             <ul class="menu vertical label-list">
               {% for tag in articles|tag_set|sort(attribute='slug') %}
                 {% if tag.slug != category.slug %}
