--- a/theme/templates/category.html
+++ b/theme/templates/category.html
@@ -34,10 +34,8 @@
           </div>
           <div class="cell small-12 medium-order-1 large-shrink large-order-1">
             <ul class="menu vertical label-list">
-              {% for tag in articles|tag_set|sort(attribute='slug') %}
-                {% if tag.slug != category.slug %}
-                  <li><a href="{{ SITEURL }}/{{ tag.url }}" class="{{ tag.slug }}" data-highlight-class="{% if loop.index is divisibleby(2) %}highlight-red{% else %}highlight-blue{% endif %}">{{ tag }}</a></li>
-                {% endif %}
+              {% for tag in articles|tag_set|rejectattr('slug', '==', category.slug)|sort(attribute='slug') %}
+                <li><a href="{{ SITEURL }}/{{ tag.url }}" class="{{ tag.slug }}" data-highlight-class="{% if loop.index is divisibleby(2) %}highlight-red{% else %}highlight-blue{% endif %}">{{ tag }}</a></li>
               {% endfor %}
             </ul>
           </div>
