--- a/theme/templates/tag.html
+++ b/theme/templates/tag.html
@@ -34,7 +34,7 @@
           </div>
           <div class="cell small-12 medium-order-1 large-shrink large-order-2">
             <ul class="menu vertical label-list">
-              {% for tag in articles|tag_set|sort(attribute='slug') %}
+              {% for tag in articles|tag_set|rejectattr('slug', '==', tag.slug)|sort(attribute='slug') %}
                 <li><a href="{{ SITEURL }}/{{ tag.url }}" class="{{ tag.slug }}" data-highlight-class="{% if loop.index is divisibleby(2) %}highlight-red{% else %}highlight-blue{% endif %}">{{ tag }}</a></li>
               {% endfor %}
             </ul>
