--- a/theme/src/_header.scss
+++ b/theme/src/_header.scss
@@ -3,7 +3,7 @@ header {
     top: 0;
     box-shadow: 0 0 5px $medium-gray;
     transition: box-shadow 0.3s;
-    margin-bottom: $global-margin * 2;
+    margin-bottom: $global-margin;
     z-index: 1000;
     background: $white;
 
