--- a/theme/src/_image_detail.scss
+++ b/theme/src/_image_detail.scss
@@ -1,4 +1,11 @@
 .image-detail {
+    figure {
+        picture {
+            display: block;
+            max-height: 75vh;
+            overflow: hidden;
+        }
+    }
     .orbit-caption {
         font-size: $paragraph-font-size;
 
