--- a/theme/src/_snippet.scss
+++ b/theme/src/_snippet.scss
@@ -22,7 +22,7 @@
                         font-size: 120%;
 
                         &.greek {
-                            text-transform: uppercase;
+                            font-family: 'GFS Neohellenic';
                         }
                     }
 
