Further small performance fix

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link rel="preload" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/theme.css"/>
+  <link rel="preload" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/fonts/Merriweather-Light.woff2"/>
+  <link rel="preload" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/fonts/Cinzel-Regular.woff2"/>
+  <link rel="preload" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/fonts/GFSNeohellenic-Regular.woff2"/>
   {% block head %}{% endblock head %}
   <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/fonts.css"/>
   <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/theme.css"/>
