Improved the usability of the explore interface on smalls screens

--- a/theme/src/_explore.scss
+++ b/theme/src/_explore.scss
@@ -100,6 +100,14 @@
                     }
                 }
             }
+
+            @include breakpoint(small only) {
+                order: 1;
+
+                &.highlight {
+                    order: 0;
+                }
+            }
         }
     }
 
